RESOLVED FIXED277557
[WebGPU] setVertexBuffer causes validation error when offset == buffer length
https://bugs.webkit.org/show_bug.cgi?id=277557
Summary [WebGPU] setVertexBuffer causes validation error when offset == buffer length
Mike Wyrzykowski
Reported 2024-08-02 10:03:57 PDT
[WebGPU] setVertexBuffer causes validation error when offset == buffer length
Attachments
Mike Wyrzykowski
Comment 1 2024-08-02 10:04:09 PDT
Mike Wyrzykowski
Comment 2 2024-08-02 10:59:45 PDT
EWS
Comment 3 2024-08-05 15:44:30 PDT
Committed 281857@main (7c9c6d17d6d8): <https://commits.webkit.org/281857@main> Reviewed commits have been landed. Closing PR #31653 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.