[WebGPU] setVertexBuffer causes validation error when offset == buffer length https://bugs.webkit.org/show_bug.cgi?id=277557 rdar://132718396

Reviewed by Tadeu Zagallo.

setVertexBuffer should not bind the vertex buffer when offset >= bufferLength.

* LayoutTests/fast/webgpu/nocrash/fuzz-277557-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-277557.html: Added.
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::executePreDrawCommands):

Canonical link: https://commits.webkit.org/281857@main